[package]
name = "youtube"
version = "0.1.1"
edition = "2021"
description = "A Rust wrapper for YouTube Data API v3"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ddd/youtube"
homepage = "https://github.com/ddd/youtube"
keywords = ["youtube", "api", "wrapper", "rust"]
categories = ["api-bindings", "web-programming"]

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
http-body-util = "0.1.2"
hyper = "1.5.0"
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.9", features = ["full"] }
native-tls = "0.2.12"
once_cell = "1.20.2"
prost = "0.13.3"
rand = "0.8.5"
serde_json = "1.0.132"
thiserror = "1.0.65"
urlencoding = "2.1.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }